--- a/ansible_files/vars/ci.yml
+++ b/ansible_files/vars/ci.yml
@@ -5,3 +5,4 @@ job_name_hash: "{{ lookup('env', 'JOB_NAME_HASH') }}"
 namespace: "{{ lookup('env', 'NAMESPACE') }}"
 openshift_ci : "{{ lookup('env', 'OPENSHIFT_CI') | bool }}"
 shared_dir: "{{ lookup('env', 'SHARED_DIR') }}"
+unique_hash: "{{ lookup('env', 'UNIQUE_HASH') }}"
