--- a/ansible_files/vars/ci_oci_infrastucture.yml
+++ b/ansible_files/vars/ci_oci_infrastucture.yml
@@ -1,5 +1,5 @@
 # OCI related vars, built from CI vars
-unique_id: "{{ namespace }}-{{ unique_hash }}"
+unique_id: "{{ build_id }}"
 oci_tf_state_file: "{{ shared_dir }}/{{ unique_id }}.tfstate"
 oci_tf_vars_file: "{{ shared_dir }}/{{ unique_id }}.tfvars"
 oci_tenancy_id: "{{ lookup('file', cluster_profile_dir + '/tenancy_ocid') | trim }}"
