NO-ISSUE: Add bonding support to assisted test infra Bonding is available for libvirt only. When bonding is enabled, 2 bonded interfaces are bonded, one per network. 3 additional environment variables: IS_BONDED(boolean): Should the interfaces be bonded.  Default is false. NUM_BONDED_SLAVES(int): The number of slave interfaces per bond. Default is 2. BONDING_MODE(string): The bonding mode. Default is active-backup.

--- a/skipper.env
+++ b/skipper.env
@@ -174,3 +174,6 @@ OCI_EXTRA_LOAD_BALANCER_NSG_IDS
 CUSTOM_MANIFESTS_FILES
 TF_APPLY_ATTEMPTS
 DISCONNECTED
+IS_BONDED
+NUM_BONDED_SLAVES
+BONDING_MODE
