Run test-infra on ARM64
Current test-infra code does not support running tests from ARM , make image_build fails.
This patch allows to run remotely kni tests by using remote shell.
Adding support for tunnel ip in ip runner and server arm64 will have internal routing
We will create a singleton tunnel object for runs and update the routing based on assets
networks.

source_loopback   external_tunnel   	remote_loopback
Runner X86      <<=================>>   Arm64
					libvirt CIDR network
					libvirt provision network
We will be route traffic bi-directional internal networks.

All actions from utils.download_image or utils.run_command which running locally today
will be run on the remote ARM machine. we are able to do it by:
- set libvirt remote host
- wrap with ssh any "local" command and run it on remote shell (ARM machine)
Evrey run_command that local runs on remote ARM machine and allow us to
- configure iptables on remote with same configuration
- access to libvirt on remote due to api calls and wrap virsh command
- virsh cleanup runs all remote ARM (it was implemented with bash and not API)
  The cleanup on ARM is different and requires - undefine --nvram to remove node
  I did not fix it yet because cleanup differ from X86.

We still have some issues with runnning proxy on ARM machine because no routing.

The code is not completed but used as POC ... need to do a lot of testing and fixes
I would like to know if you agree or maybe test infra will run on ARM ?

In order to run the tests need:
export LIBVIRT_URI="qemu+tcp://nvd-srv-12.nvidia.eng.rdu2.redhat.com/system"
export REMOTE_SHELL_ADDRESS="10.8.231.11"
export REMOTE_SHELL_PRIVATE_KEY="/root/.ssh/id_rsa"
export CPU_ARCHITECTURE=arm64

Need to copy-ssh-id from node to arm machine to login with key and not password.

Please let me know what do you think because in case we have ARM machine we will have
to run full cycle of tests.

I have managed to install basic cluster with test-infra code - as POC
but it wi

--- a/skipper.env
+++ b/skipper.env
@@ -177,3 +177,7 @@ DISCONNECTED
 IS_BONDED
 NUM_BONDED_SLAVES
 BONDING_MODE
+LIBVIRT_URI
+REMOTE_SHELL_ADDRESS
+REMOTE_SHELL_PRIVATE_KEY
+REMOTE_SHELL_USER
