--- a/ansible_files/roles/oci/cleanup_resources/defaults/main.yml
+++ b/ansible_files/roles/oci/cleanup_resources/defaults/main.yml
@@ -6,4 +6,7 @@ excluded_types:
   - oci_load_balancer_backend
   - oci_load_balancer_backend_set
   - oci_load_balancer_listener
+  - oci_network_load_balancer_backend
+  - oci_network_load_balancer_backend_set
+  - oci_network_load_balancer_listener
 expired_after_hours: 6
