NO-ISSUE: fix oci cleanup
2 resources were deleted to early because we don't know when they were
created.

- `oci_core_network_security_group_security_rule`: exclude it from
  deletion, the parent network security group will delete it
- `oci_objectstorage_object`: exclude it from deletion if its parent
  bucket is already excluded

--- a/ansible_files/roles/oci/cleanup_resources/defaults/main.yml
+++ b/ansible_files/roles/oci/cleanup_resources/defaults/main.yml
@@ -1,6 +1,7 @@
 # these type are cleaned up by removing their parent resource
 # we exclude them from the removal to avoid conflict type of errors
 excluded_types:
+  - oci_core_network_security_group_security_rule
   - oci_core_private_ip
   - oci_core_public_ip
   - oci_load_balancer_backend
