MULTIARCH-3980: Add new env vars for s390x support
Signed-off-by: Amadeus Podvratnik <apodvrat@redhat.com>

--- a/skipper.env
+++ b/skipper.env
@@ -178,3 +178,7 @@ IS_BONDED
 NUM_BONDED_SLAVES
 BONDING_MODE
 REGISTRY_CA_PATH
+ZVM_BASTION_HOST
+ZVM_BASTION_USER
+ZVM_BASTION_PRIVATE_KEY
+ZVM_NODE_CFG_PATH
