MGMT-16319: Create OCI cluster nodes with iSCSI boot volume

--- a/skipper.env
+++ b/skipper.env
@@ -171,6 +171,7 @@ OCI_PRIVATE_SUBNET
 DEBUG_TERRAFORM
 OCI_EXTRA_NODE_NSG_IDS
 OCI_EXTRA_LOAD_BALANCER_NSG_IDS
+OCI_BOOT_VOLUME_TYPE
 CUSTOM_MANIFESTS_FILES
 TF_APPLY_ATTEMPTS
 DISCONNECTED
