--- a/skipper.env
+++ b/skipper.env
@@ -183,3 +183,5 @@ ZVM_BASTION_HOST
 ZVM_BASTION_USER
 ZVM_BASTION_PRIVATE_KEY
 ZVM_NODE_CFG_PATH
+EXTERNAL_PLATFORM_NAME
+EXTERNAL_CLOUD_CONTROLLER_MANAGER
