--- a/skipper.env
+++ b/skipper.env
@@ -126,8 +126,8 @@ LOGGER_NAME
 AGENT_TIMEOUT_START
 ADDITIONAL_NTP_SOURCE
 SPOKE_NAMESPACE
-API_VIP
-INGRESS_VIP
+API_VIPS
+INGRESS_VIPS
 WORKERS_COUNT
 MASTERS_COUNT
 IPXE_BOOT
