--- a/ansible_files/roles/oci/setup_oci_for_test_infra/tasks/custom_manifests.yml
+++ b/ansible_files/roles/oci/setup_oci_for_test_infra/tasks/custom_manifests.yml
@@ -1,50 +1,12 @@
-- name: Install podman
-  ansible.builtin.dnf:
-    name: podman
-    state: present
-
-- name : Pull butane image
-  ansible.builtin.command:
-    cmd: podman pull quay.io/coreos/butane:release
-  retries: 5
-  delay: 30
-  register: result
-  until: result.rc == 0
-
 - name: Create file custom manifests directories
   ansible.builtin.file:
-    path: "{{ custom_manifests_dir }}/{{ item }}"
+    path: "{{ custom_manifests_dir }}/manifests"
     state: directory
     mode: '0755'
-  loop:
-    - openshift
-    - manifests
 
-- name: Generate machine configs for provider ID
-  ansible.builtin.command:
-    cmd: podman run -i --rm quay.io/coreos/butane:release --pretty --strict
-  args:
-    stdin: "{{ lookup('ansible.builtin.template', 'oci-kubelet-providerid.bu.j2') }}"
-  register: mc_provider_id
-  loop:
-    - master
-    - worker
-  loop_control:
-    loop_var: machine_role
-
-- debug:
-    var: mc_provider_id
-
-- name: Write machine configs for provider ID on disk
-  ansible.builtin.copy:
-    content: "{{ item.stdout }}"
-    dest: "{{ custom_manifests_dir }}/openshift/99_openshift-machineconfig_00-{{ item.machine_role }}-kubelet-providerid.yaml"
-    mode: '0644'
-  loop: "{{ mc_provider_id.results }}"
-
-- name: Write CCM config on disk
+- name: Render custom manifests on disk
   ansible.builtin.template:
     src: "{{ item }}.j2"
     dest: "{{ custom_manifests_dir }}/manifests/{{ item }}"
     mode: '0644'
-  loop: "{{ oci_ccm_manifests }}"
+  loop: "{{ oci_manifests }}"
