NO-ISSUE: netaddr package rollback do to breaking changes

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,6 +24,7 @@ updates:
           - "*"
         exclude-patterns:
           - "flake8-bugbear"
+          - "netaddr"
 
   - package-ecosystem: "docker"
     directory: "/"
