fix nutanix default disk size

--- a/packer_files/nutanix_centos_template/centos-config/ks.cfg
+++ b/packer_files/nutanix_centos_template/centos-config/ks.cfg
@@ -33,7 +33,7 @@ part /boot --fstype=ext4 --size=512
 part pv.1 --size=10000 --grow
 volgroup vg00 pv.1
 logvol swap --vgname=vg00 --recommended --name=swap --fstype=swap
-logvol / --vgname=vg00 --size=5000 --grow --name=root --fstype=ext4
+logvol / --vgname=vg00 --percent=100 --grow --name=root --fstype=ext4
 
 # Partition clearing information
 clearpart --none --initlabel
