MGMT-17308: Offboard osherdp from maintainers list

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,7 @@ updates:
       interval: "weekly"
     assignees:
       - "eliorerz"
-      - "osherdp"
+      - "adriengentil"
     labels:
       - "approved"
       - "lgtm"
