fixing disk size in kickstart

--- a/packer_files/nutanix_centos_template/centos-config/ks.cfg
+++ b/packer_files/nutanix_centos_template/centos-config/ks.cfg
@@ -2,7 +2,7 @@
 text
 
 %packages
-@^server-product-environment
+@^Minimal install
 kexec-tools
 openssh-server
 perl
@@ -30,10 +30,10 @@ ignoredisk --only-use=sda
 bootloader --append="crashkernel=auto" --location=mbr --boot-drive=sda
 
 part /boot --fstype=ext4 --size=512
-part pv.1 --size=10000 --grow
+part pv.1 --size 99999 --grow --ondisk=sda
 volgroup vg00 pv.1
-logvol swap --vgname=vg00 --recommended --name=swap --fstype=swap
-logvol / --vgname=vg00 --percent=100 --grow --name=root --fstype=ext4
+logvol swap --vgname=vg00 --recommended  --name=swap --fstype=swap
+logvol / --vgname=vg00 --percent=100 --name=root --fstype=ext4
 
 # Partition clearing information
 clearpart --none --initlabel
