--- a/packer_files/vsphere_centos_template/centos-config/centos8-ks.cfg
+++ b/packer_files/vsphere_centos_template/centos-config/centos8-ks.cfg
@@ -31,10 +31,10 @@ ignoredisk --only-use=sda
 bootloader --append="crashkernel=auto" --location=mbr --boot-drive=sda
 
 part /boot --fstype=ext4 --size=512
-part pv.1 --size=10000 --grow
+part pv.1 --size 99999 --grow --ondisk=sda
 volgroup vg00 pv.1
-logvol swap --vgname=vg00 --recommended --name=swap --fstype=swap
-logvol / --vgname=vg00 --size=5000 --grow --name=root --fstype=ext4
+logvol swap --vgname=vg00 --recommended  --name=swap --fstype=swap
+logvol / --vgname=vg00 --percent=100 --name=root --fstype=ext4
 
 # Partition clearing information
 clearpart --none --initlabel
